// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus012MonitoringCheckProperties.proto";


package pusModelEditor.protobuf;

message Pus012ParameterMonitoringDefinition {
extensions 46 to 146;

  optional ccsds_mal.protobuf.UINTEGER monitoringId = 1;
  optional ccsds_mal.protobuf.STRING monitoringIdLabel = 2;
  optional ccsds_mal.protobuf.STRING monitoringName = 3;
  optional ccsds_mal.protobuf.UINTEGER parameterId = 4;
  optional ccsds_mal.protobuf.UINTEGER parameterName = 5;
  optional ccsds_mal.protobuf.UINTEGER monitoringStatus = 6;
  optional ccsds_mal.protobuf.STRING protectionStatus = 7;
  optional ccsds_mal.protobuf.UINTEGER monitoringInterval = 8;
  optional ccsds_mal.protobuf.UINTEGER repetitionNumber = 9;
  optional ccsds_mal.protobuf.STRING checkType = 10;
  optional ccsds_mal.protobuf.UINTEGER validityParameterId = 11;
  optional ccsds_mal.protobuf.STRING validityParameterName = 12;
  optional ccsds_mal.protobuf.STRING validityParameterMask = 13;
  optional ccsds_mal.protobuf.STRING parameterCurrentValue = 14;
  optional ccsds_mal.protobuf.STRING validityParameterExpectedValue = 15;
  optional pusModelEditor.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesLow = 16;
  optional pusModelEditor.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesHigh = 17;
  optional pusModelEditor.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesExpected = 18;
  optional ccsds_mal.protobuf.BOOLEAN isMonitoringIntervalSet = 19;
  optional ccsds_mal.protobuf.BOOLEAN isRepetitionNumberSet = 20;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeMonId = 21;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeMonId = 22;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeParamId = 23;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeParamId = 24;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValParamId = 25;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeValParamId = 26;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeParamCurrentValue = 27;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeParamCurrentValue = 28;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValParamExpectValue = 29;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeValParamExpectValue = 30;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeValParamMask = 31;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeValParamMask = 32;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeMonInterval = 33;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeMonInterval = 34;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeRepetition = 35;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeRepetition = 36;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeCheckType = 37;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeCheckTime = 38;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeMonStatus = 39;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeMonStatus = 40;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeProtectionStatus = 41;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeProtectionStatus = 42;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 43;
  optional ccsds_mal.protobuf.STRING serviceApidName = 44;
  optional ccsds_mal.protobuf.ULONG uniqueId = 45;
}
